# assimp_collada_sample_20111121

./: CMakeLists.txt  README
src/: CMakeLists.txt  common.cpp  common.hpp  main.cpp
src/resources/effects/: phong_in_world.cgfx
src/resources/models/: can.dae  girl.dae  simple.dae
